--- a/domain.yml
+++ b/domain.yml
@@ -7,6 +7,8 @@ session_config:
 intents:
 - check_human:
     use_entities: true
+- open_hysa:
+    use_entities: true
 - start_savings_session:
     use_entities: true
 - transfer_money:
@@ -363,7 +365,7 @@ responses:
       title: Open a CD
     text: Let's get you saving so an emergency doesn't become a crisis. An emergency savings is simply a savings account that is usually put into a High Yield Savings Account, a.k.a. HYSA. These types of accounts give you some interest for holding your cash. So how much should you have in an emergency savings? You should aim to have 3-6 months of your monthly salary. That can be a lot to start off with so the first goal is to have at least $1000. What do you want to do today?
   utter_open_hysa:
-  - text: Please click this link
+  - text: 'Please click this link: https://www.marcus.com/us/en'
 actions:
 - action_session_start
 - action_restart
