--- a/endpoints.yml
+++ b/endpoints.yml
@@ -12,7 +12,7 @@ version: "2.0"
 # https://rasa.com/docs/rasa/core/actions/#custom-actions/
 
 action_endpoint:
- url: "http://app:5055/webhook"
+ url: "http://localhost:5056/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
