--- a/.github/workflows/custom_action_server.yml
+++ b/.github/workflows/custom_action_server.yml
@@ -16,7 +16,7 @@ jobs:
 
       - id: action_server
         name: Build an action server with a custom actions
-        uses: RasaHQ/action-server-gha@master
+        uses: RasaHQ/action-server-gha@main
         with:
           # Path to the directory with actions.
           actions_directory: ./actions
