--- a/.github/workflows/custom_action_server.yml
+++ b/.github/workflows/custom_action_server.yml
@@ -19,7 +19,7 @@ jobs:
         name: Build an action server with a custom actions
         uses: RasaHQ/action-server-gha@main
         with:
-          actions_directory: './actions.'
+          actions_directory: './actions'
           requirements_file: './actions/requirements-actions.txt'
           docker_registry_login: ${{ secrets.DOCKER_HUB_LOGIN }}
           docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
