--- a/endpoints.yml
+++ b/endpoints.yml
@@ -11,6 +11,9 @@ version: "2.0"
 # Server which runs your custom actions.
 # https://rasa.com/docs/rasa/core/actions/#custom-actions/
 
+# action_endpoint:
+#  url: "http://app:5055/webhook"
+
 action_endpoint:
  url: "http://app:5055/webhook"
 
