--- a/data/nlu/nlu.yml
+++ b/data/nlu/nlu.yml
@@ -85,11 +85,8 @@ nlu:
   examples: |
     - How much money is on my account?
     - How much money is on my [bank](account_type) account?
-    - what's my [balance](amount-of-money)?
-    - what's my [current balance](amount-of-money)?
     - What's left on that account?
     - How much do I have on that account?
-    - What's the [balance](amount-of-money) on that account?
     - How much money is left on that account?
     - what is my [bank](account_type) account [balance](amount-of-money)
     - what's my [bank](account_type) account [balance](amount-of-money)?
@@ -123,9 +120,6 @@ nlu:
     - Can you tell me my account [balance](amount-of-money)?
     - Hello, I would like to know how much money is in much money is in my account
     - hi, whats my account bal please
-    - so.... what's my [balance](amount-of-money)?
-    - whats my [current balance](amount-of-money)
-    - What's my [balance](amount-of-money)?
     - How much money do I have?
     - Yeah, I like coffee 👀 But how much money do I have?
     - Yeah, I know 😀 Since it's so nice: How much money do I have?
@@ -634,6 +628,10 @@ nlu:
     - what's my balance
     - what's my balance?
     - my account balance
+    - what is my balance
+    - what is my balance?
+    - What is my account balance
+    - What is my account balance?
 - synonym: credit
   examples: |
     - credit card
