--- a/.github/workflows/custom_action_server.yml
+++ b/.github/workflows/custom_action_server.yml
@@ -25,4 +25,4 @@ jobs:
           docker_registry_password: ${{ secrets.DOCKER_HUB_PASSWORD }}
           docker_image_name: 'jpark2111/wealthbuild_rasa_action_server'
           docker_image_tag: 'latest'
-          dockerfile: 'Dockerfile'
+          dockerfile: 'actions/Dockerfile'
