--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,7 @@ pipeline:
   - name: FallbackClassifier
     threshold: 0.7
   - name: DucklingEntityExtractor
-    url: http://duckling:8000
+    url: http://localhost:8000
     dimensions:
     - amount-of-money
     - time
