--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -24,6 +24,21 @@ stories:
   steps:
   - intent: start_savings_session
   - action: utter_start_savings_session
+  - action: utter_savings_session2
+  - action: savings_form
+  - active_loop: savings_form
+  - slot_was_set:
+    - requested_slot: savings_amount_of_money
+  - slot_was_set:
+    - savings_amount_of_money: 1000
+  - slot_was_set:
+    - requested_slot: savings_timeline
+  - slot_was_set:
+    - savings_timeline: 6
+  - slot_was_set:
+    - requested_slot: null
+  - active_loop: null
+  - action: action_savings_goal_amount
 - story: draft_accountbalance
   steps:
   - intent: mx_accountbalance
