update saving story utter_savings_takeaction

--- a/actions/Dockerfile
+++ b/actions/Dockerfile
@@ -2,7 +2,7 @@ FROM rasa/rasa-sdk:2.8.2
 
 WORKDIR /app
 
-COPY actions /app/actions
+COPY . /app/actions
 
 USER root
 RUN pip install --no-cache-dir -r /app/actions/requirements-actions.txt
