--- a/endpoints.yml
+++ b/endpoints.yml
@@ -15,7 +15,7 @@ version: "2.0"
 #  url: "http://localhost:5056/webhook"
 
 action_endpoint:
- url: "http://localhost:5055/webhook"
+ url: "http://app:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
