--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-#.env
+.env
 .venv
 env/
 venv/
@@ -123,3 +123,4 @@ results/
 # Secret & local files
 secret/
 run_rasa*
+
