--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -25,7 +25,7 @@ stories:
   - intent: start_savings_session
   - action: utter_start_savings_session
   - action: utter_savings_session2
-  - action: savings_form
+  - action: action_savings_form
   - active_loop: savings_form
   - slot_was_set:
     - requested_slot: savings_amount_of_money
@@ -73,7 +73,7 @@ stories:
   - slot_was_set:
     - requested_slot: null
   - active_loop: null
-  - action: utter_nickname
+  - action: action_financial360
 - story: financial360 session deny and greet
   steps:
   - intent: start_financial360_session
@@ -94,8 +94,11 @@ stories:
   - action: action_mx_accountbalance
 - story: ask_nickname_rememberit
   steps:
-  - intent: greet
-  - action: utter_greet
+  - intent: startSession
+    entities:
+    - userName: jay
+    - userId: 1
+  - action: action_greet
   - action: nickname_form
   - active_loop: nickname_form
   - slot_was_set:
