--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: "3.4"
 
 services:
-  rasa-server:
+  rasa:
     restart: always
     image: "jpark2111/wb_rasa:latest-SG"
     ports:
       - 5006:5005
-    volumes:
-      - ./:/app
     depends_on:
       - duckling
       - app
